.tox/py26/log/py26-1.log
actionid: py26
msg: getenv
cmdargs: ['/Users/leahvelleman/src/morpho/.tox/py26/bin/pip', 'install', 'pytest', 'hypothesis']

DEPRECATION: Python 2.6 is no longer supported by the Python core team, please upgrade your Python. A future version of pip will drop support for Python 2.6
Collecting pytest
/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/pip/_vendor/requests/packages/urllib3/util/ssl_.py:318: SNIMissingWarning: An HTTPS request has been made, but the SNI (Subject Name Indication) extension to TLS is not available on this platform. This may cause the server to present an incorrect TLS certificate, which can cause validation failures. You can upgrade to a newer version of Python to solve this. For more information, see https://urllib3.readthedocs.io/en/latest/security.html#snimissingwarning.
  SNIMissingWarning
/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/pip/_vendor/requests/packages/urllib3/util/ssl_.py:122: InsecurePlatformWarning: A true SSLContext object is not available. This prevents urllib3 from configuring SSL appropriately and may cause certain SSL connections to fail. You can upgrade to a newer version of Python to solve this. For more information, see https://urllib3.readthedocs.io/en/latest/security.html#insecureplatformwarning.
  InsecurePlatformWarning
  Downloading pytest-3.2.3-py2.py3-none-any.whl (187kB)
Collecting hypothesis
  Downloading hypothesis-3.8.3.tar.gz (79kB)
Requirement already satisfied: setuptools in ./.tox/py26/lib/python2.6/site-packages (from pytest)
Collecting py>=1.4.33 (from pytest)
  Using cached py-1.4.34-py2.py3-none-any.whl
Collecting ordereddict; python_version == "2.6" (from pytest)
  Downloading ordereddict-1.1.tar.gz
Collecting argparse; python_version == "2.6" (from pytest)
  Downloading argparse-1.4.0-py2.py3-none-any.whl
Collecting enum34 (from hypothesis)
  Using cached enum34-1.1.6-py2-none-any.whl
Building wheels for collected packages: hypothesis, ordereddict
  Running setup.py bdist_wheel for hypothesis: started
  Running setup.py bdist_wheel for hypothesis: finished with status 'error'
  Complete output from command /Users/leahvelleman/src/morpho/.tox/py26/bin/python2.6 -u -c "import setuptools, tokenize;__file__='/private/var/folders/05/6rw3pz3n6n57db3pqf5r5pg00000gn/T/pip-build-PZReC1/hypothesis/setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" bdist_wheel -d /var/folders/05/6rw3pz3n6n57db3pqf5r5pg00000gn/T/tmp2UXGqnpip-wheel- --python-tag cp26:
  Traceback (most recent call last):
    File "<string>", line 1, in <module>
    File "/private/var/folders/05/6rw3pz3n6n57db3pqf5r5pg00000gn/T/pip-build-PZReC1/hypothesis/setup.py", line 97, in <module>
      long_description=open(README).read(),
    File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/distutils/core.py", line 138, in setup
      ok = dist.parse_command_line()
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 442, in parse_command_line
      result = _Distribution.parse_command_line(self)
    File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/distutils/dist.py", line 460, in parse_command_line
      args = self._parse_command_opts(parser, args)
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 756, in _parse_command_opts
      nargs = _Distribution._parse_command_opts(self, parser, args)
    File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/distutils/dist.py", line 518, in _parse_command_opts
      cmd_class = self.get_command_class(command)
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 576, in get_command_class
      self.cmdclass[command] = cmdclass = ep.load()
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/pkg_resources/__init__.py", line 2409, in load
      return self.resolve()
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/pkg_resources/__init__.py", line 2415, in resolve
      module = __import__(self.module_name, fromlist=['__name__'], level=0)
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/wheel/bdist_wheel.py", line 407
      ignore=lambda x, y: {'PKG-INFO', 'requires.txt', 'SOURCES.txt',
                                     ^
  SyntaxError: invalid syntax
  
  ----------------------------------------
  Failed building wheel for hypothesis
  Running setup.py clean for hypothesis
  Running setup.py bdist_wheel for ordereddict: started
  Running setup.py bdist_wheel for ordereddict: finished with status 'error'
  Complete output from command /Users/leahvelleman/src/morpho/.tox/py26/bin/python2.6 -u -c "import setuptools, tokenize;__file__='/private/var/folders/05/6rw3pz3n6n57db3pqf5r5pg00000gn/T/pip-build-PZReC1/ordereddict/setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" bdist_wheel -d /var/folders/05/6rw3pz3n6n57db3pqf5r5pg00000gn/T/tmpCUxnblpip-wheel- --python-tag cp26:
  Traceback (most recent call last):
    File "<string>", line 1, in <module>
    File "/private/var/folders/05/6rw3pz3n6n57db3pqf5r5pg00000gn/T/pip-build-PZReC1/ordereddict/setup.py", line 8, in <module>
      py_modules=['ordereddict']
    File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/distutils/core.py", line 138, in setup
      ok = dist.parse_command_line()
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 442, in parse_command_line
      result = _Distribution.parse_command_line(self)
    File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/distutils/dist.py", line 460, in parse_command_line
      args = self._parse_command_opts(parser, args)
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 756, in _parse_command_opts
      nargs = _Distribution._parse_command_opts(self, parser, args)
    File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/distutils/dist.py", line 518, in _parse_command_opts
      cmd_class = self.get_command_class(command)
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/setuptools/dist.py", line 576, in get_command_class
      self.cmdclass[command] = cmdclass = ep.load()
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/pkg_resources/__init__.py", line 2409, in load
      return self.resolve()
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/pkg_resources/__init__.py", line 2415, in resolve
      module = __import__(self.module_name, fromlist=['__name__'], level=0)
    File "/Users/leahvelleman/src/morpho/.tox/py26/lib/python2.6/site-packages/wheel/bdist_wheel.py", line 407
      ignore=lambda x, y: {'PKG-INFO', 'requires.txt', 'SOURCES.txt',
                                     ^
  SyntaxError: invalid syntax
  
  ----------------------------------------
  Failed building wheel for ordereddict
  Running setup.py clean for ordereddict
Failed to build hypothesis ordereddict
Installing collected packages: py, ordereddict, argparse, pytest, enum34, hypothesis
  Running setup.py install for ordereddict: started
    Running setup.py install for ordereddict: finished with status 'done'
  Running setup.py install for hypothesis: started
    Running setup.py install for hypothesis: finished with status 'done'
Successfully installed argparse-1.4.0 enum34-1.1.6 hypothesis-3.8.3 ordereddict-1.1 py-1.4.34 pytest-3.2.3
